[build-system]
requires = ["hatchling", "hatch-semver"]
build-backend = "hatchling.build"

[project]
name = "yet-another-retry"
authors = [{ name = "MazrimT" }]
version = "0.1.0"
description = "Yet another retry decorator for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = { text = 'MIT License' }
keywords = ["retry", "decorator", "retry decorator"]

[project.urls]
Homepage = "https://github.com/MazrimT/yet-another-retry"
Repository = "https://github.com/MazrimT/yet-another-retry.git"
Issues = "https://github.com/MazrimT/yet-another-retry/issues"

[project.scripts]
yet-another-retry = "yet_another_retry.__main__:main"

[dependency-groups]
dev = ["pytest"]
